--- a/afo.html
+++ b/afo.html
@@ -43,23 +43,23 @@
 		
 		<p>Anime Festival Orlando began as a project of Anime Gaijin America in 1999, a pattern reflected in many early anime conventions. AGA was a Florida anime fan club, extant from the early 1990s until its dissolution in the early 2000s. The convention has Karen Trudeau and Erik Reiss as the convention chair since its inception, a relative rarity as many conventions experience a good deal of turnover as well as relying on a board of directors.
 AFO is a hotel based convention, moving to different venues in the early 1990s until finally settling upon the Wyndham Resort on International Drive in Orlando, Florida. The programming at AFO runs from early morning until 2am, incorporating panels on Japanese culture, anime, and music along with guest performances and discussion sessions. AFO does not disclose attendance numbers but conservative estimates place the number at approximately 3500. 
-<br>
+<br><br>
 Today the convention is best known for being Central Florida’s longest running anime convention and for Warriors of Orlandia, an interactive, weekend long game that involves the attendees. The game typically involves two or more factions struggling for supremacy, the winner being decided by the actions of the convention attendees. Live action stage shows, quests, a fantasy style tavern and other components are available for attendees throughout the weekend. The Orlandia game has undergone various iterations, including a steampunk version and a fantasy themed edition. Warriors of Orlandia also spawned a card game that is associated with the live action game.
-<br>
+<br><br>
 Notable guests at Anime Festival Orlando have included Steve Bennett (Studio Ironcat), Colleen Clinkenbeard (One Piece), and Stephanie Sheh (Naruto). Compared to most anime conventions, AFO leans heavily towards tokusatsu guests. Tokusatsu, a genre of Japanese media that relies extensively on practical visual effects, has been imported and regionalized in the United States as programs such as Power Rangers and Kamen Rider: Dragon Knight. Johnny Yong Bosch (Black Ranger), Jason David Frank (Green Ranger), and Reuben Langdon (stuntman, Power Rangers: Lost Galaxy) have made frequent appearances at the convention. Japanese guests are relatively infrequent at AFO, although musician Saya has made multiple appearances.
-<br>
+<br><br>
 www.animefestivalorlando.com
 </p>
 		<br>
+		<br>
 <p>
-	<h1 class="display-5">Anime Festival Orlando</h1>
+	<h1 class="display-5">Anime Festival Orlando Information</h1>
 	
-	Anime Festival Orlando
-		First year: 1999
-		Type of convention: Hotel based
-		Location: Wyndham Resort, International Drive, Orlando, FL.
-		Attendance: Undisclosed, estimated 3500 in 2016
-		Directors: Karen Trudeau, Erik Reiss
+		First year: 1999<br>
+		Type of convention: Hotel based<br>
+		Location: Wyndham Resort, International Drive, Orlando, FL.<br>
+		Attendance: Undisclosed, estimated 3500 in 2016<br>
+		Directors: Karen Trudeau, Erik Reiss<br>
 		</p>
 	
 <!-- Page Content -->
